--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
   </div>
 
   <div id="admin-section" style="display: none;">
-    <h2>Alumnus List</h2>
+    <h2>Alumni List</h2>
     <button id="downloadCSV">Download CSV</button>
     <table id="registrationTable">
       <thead>
