--- a/index.html
+++ b/index.html
@@ -32,6 +32,10 @@
 
 <body>
   <header>
+    <div class="logo">
+        <img src="logo-final.png" alt="logo">
+    </div>
+    
     <ul id="nav-menu">
       <li id="menu-registration">Registration</li>
       <li id="menu-administration">Administration</li>
