edited htlm menu admin wordings

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
     
     <ul id="nav-menu">
       <li id="menu-registration">Registration</li>
-      <li id="menu-administration">Administration</li>
+      <li id="menu-administration">Admin</li>
       <li id="menu-contact" onClick="contact()">Contact</li>
     </ul>
   </header>
